updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a recent college grad, Temple University Class of 2020, currently living in South Philly doing odd jobs. Many of these jobs in the last year have involved web design and management for small businesses for which I taught myself how to use Squarespace.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Collegeville, Pennsylvania.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I wouldn't consider myself someone with any hobbies per se. I unfortunately have dedicated most of my time to school and part time jobs but I adore art of all kinds, so before social distancing precautions I spent a lot of time in art museums and going to performances. I also enjoy reading, painting, and watching documentaries, but those hobbies were often motivated by college courses.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Running my own business, something that runs on community and builds platforms for others.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>South Philadelphia.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I've never been very knowlegable about technology but I like the work I've been doing involving website maintenace and I would love to educate myself on web development beyond Squarespace. My education background is in art history and my work experience has largely been with creative non profits and I would like to merge these passions with skills from this class.</p>
     </section>
 
     <footer id="footer">
