more changes to my details

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <p>I wouldn't consider myself someone with any hobbies per se. I unfortunately have dedicated most of my time to school and part time jobs but I adore art of all kinds, so before social distancing precautions I spent a lot of time in art museums and going to performances. I also enjoy reading, painting, and watching documentaries, but those hobbies were often motivated by college courses.</p>
       <h1>What's your dream job?</h1>
       <p>Running my own business, something that revolves around community and builds platforms for others while accruing enough profit to partially be returned to said community. Just typing out loud here.</p>
+      <p> Before I do that, I want to learn a lot by working for businesses or non profits I admire. I'd like to gain knowlege and experience before eventually culminating a business plan, which I am in no rush to do. 
       <h1>Where do you live?</h1>
       <p>South Philadelphia.</p>
       <h1>Why do you want to be a web developer?</h1>
